--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
@@ -15,5 +15,10 @@
         <li><a href="recepies/apple_crisp.html">Apple Crisp II</a> </li>
 
     </ol>
+
+    <footer>
+        <p>Author: Ali-ELHaggar</p>
+        <p><a href="https://github.com/Ali-ELHaggar/">https://github.com/Ali-ELHaggar/</a></p>
+      </footer>  
 </body>
 </html>
