--- a/recepies/apple_crisp.html
+++ b/recepies/apple_crisp.html
@@ -4,9 +4,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Apple Crisp II</title>
 </head>
 <body>
     <h1>Apple Crisp II</h1>
+    <img src="../images/apple.jpeg">
+
+    <ul>
+        <li>1 tablespoon olive oil
+        <li>2 ½ cups cubed fully cooked ham
+        <li>½ cup chopped onion
+        <li>3 cloves garlic, minced
+        <li>1 teaspoon Italian seasoning
+        <li>¼ teaspoon red pepper flakes
+        <li>salt and pepper to taste
+        <li>4 cups low-sodium chicken broth
+        <li>1 ¼ cups fat free half-and-half
+        <li>¼ cup all-purpose flour
+        <li>1 (16 ounce) package farfalle (bow tie) pasta
+        <li>2 cups frozen peas and carrots
+        <li>½ cup grated Parmesan cheese
+        <li>chopped parsley for garnish 
+    </ul>        
+
+    <h2>Directions</h2>
+        <h4>Step 1</h4>
+            <p>Heat olive oil in a large pot over medium heat. Add ham and onion; saute for about 3 minutes. Add garlic and cook until
+                fragrant, about 30 seconds. Stir in Italian seasoning, red pepper flakes, salt and pepper; cook for 2 minutes.</p>
+        <h4>Step 2</h4>
+            <p>Whisk together chicken broth, half-and-half, and flour in a bowl until smooth; pour into the pot. Stir in farfalle pasta,
+                cover, and cook for 15 minutes.</p>
+        <h4>Step 3</h4>
+            <p>Add peas and carrots. Cook until pasta is cooked through, about 8 more minutes. Stir in Parmesan cheese and
+                garnish with chopped parsley. Serve immediately.</p>
+                <a href="../index.html">Back to main</a>
+
+                <footer>
+                    <p>Author: Ali-ELHaggar</p>
+                    <p><a href="https://github.com/Ali-ELHaggar/">https://github.com/Ali-ELHaggar/</a></p>
+                  </footer>         
 </body>
 </html>
